--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
         "grunt-curl": "0.5.0",
         "grunt-shell": "0.2.1",
         "q": "0.9.2"
+    },
+    "scripts": {
+        "postinstall": "scripts/postinstall.sh"
     }
 }
